k8s-manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
      - path: /redis
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
